# ChangeLog for net-misc/zaptel
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.88 2006/12/19 09:36:30 drizzt Exp $

*zaptel-1.2.12 (19 Dec 2006)

  19 Dec 2006; Timothy Redaelli <drizzt@gentoo.org>
  +files/zaptel-1.2.12-gentoo.diff, +zaptel-1.2.12.ebuild:
  Version bump, this should fix bug #157009.

  27 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  zaptel-1.2.11-r1.ebuild:
  Add libusb dep wrt #156312 (used by astribank utils)

*zaptel-1.2.11-r1 (27 Nov 2006)
*zaptel-1.2.9.1-r1 (27 Nov 2006)
*zaptel-1.0.10-r2 (27 Nov 2006)

  27 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  -files/zaptel-1.2.10-gentoo.diff, files/zaptel.udevd,
  -zaptel-1.0.10-r1.ebuild, +zaptel-1.0.10-r2.ebuild,
  -zaptel-1.2.9.1.ebuild, +zaptel-1.2.9.1-r1.ebuild, -zaptel-1.2.10.ebuild,
  -zaptel-1.2.11.ebuild, +zaptel-1.2.11-r1.ebuild:
  Revbump with updated udev rules to avoid b0rkage with new stable udev

  19 Nov 2006; Timothy Redaelli <drizzt@gentoo.org> zaptel-1.2.11.ebuild:
  Applied a patch to make it compile on kernel 2.4, thanks to Nico Baggus for
  bug 155604.

*zaptel-1.2.11 (17 Nov 2006)

  17 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  +files/zaptel-1.2.11-gentoo.diff, +zaptel-1.2.11.ebuild:
  Revbump to support new digium hardware, also fix #154241

*zaptel-1.2.10 (07 Nov 2006)

  07 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  +files/zaptel-1.2.10-gentoo.diff, +zaptel-1.2.10.ebuild:
  Revbump with fixes for #148374 and #154241

  06 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> zaptel-1.2.9.1.ebuild:
  Stable on x86 wrt bug #144941.

  03 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  -files/zaptel-bristuff-0.2.0-RC8g.patch,
  -files/zaptel-bristuff-0.2.0-RC8h.patch,
  -files/zaptel-bristuff-0.2.0-RC8n.patch,
  -files/zaptel-1.0.4-experimental-devfs26.diff,
  -files/zaptel-1.0.7-gentoo.diff, -files/zaptel-1.0.8-gentoo.diff,