@@ -76,6 +76,7 @@ SHA256 1a50fb553fd44ee7fcc64a5a855bae09afbdbcd302c6fcd8731bb4976637fc3c files/za
 DIST bristuff-0.2.0-RC8q.tar.gz 152037 RMD160 aaa9ca23eaeb74abc96dd7240f67e7886d4d6ad9 SHA1 27a6f56f47aa7ee5459d2625da7cff310909764e SHA256 8ba7a1e1e6ee8e9d77853d6d790d0de5deced7c11679b9b0e108cca817ed9728
 DIST bristuff-0.3.0-PRE-1s.tar.gz 265953 RMD160 8d3abdbbae4c376d52225395c72f4538e1f84a94 SHA1 1d942df9e4fd963755080e011caba88a33601c1b SHA256 30adea4f070ed44d1952163e850c177f976857b96965e18844ccd492ccef968d
 DIST bristuff-0.3.0-PRE-1v.tar.gz 267644 RMD160 5c5f034d29f4156351a495f40c9c4b176f65e06e SHA1 0ffbe79cd44119b09eb744eb9bf1b6fb90fa1bab SHA256 91254dd6c71b74a5990df622b523d06c2f0399c6e47630e5155392c1598fd39e
+DIST bristuff-0.3.0-PRE-1x.tar.gz 279200 RMD160 bc84aa50370627cfead9e0646cf87c16ddff7b00 SHA1 e02a82cebaefa0d666ad56532369310aae818d91 SHA256 13d98160d4a10b46b77c822577e6c64ad7dadbc2df1b4cd0a1007ae3bbbd4aa8
 DIST zaphfc_0.3.0-PRE-1o_florz-12.diff.gz 10736 RMD160 b95d2301402e1108bc480ce0e66e87e3062eccf8 SHA1 f8ab2f312c6a2b2f607b9e7f3ccbcca0858c53a7 SHA256 04a8dd22d581b5d28d46a589d695f6eb634bf2bf355347a637fe2d560a63528c
 DIST zaptel-1.0.10.tar.gz 327832 RMD160 a797bb36f35e50c51d30705ad1d628f5728d87ed SHA1 98544260fca2afbcd304f7354b62a56138e15a09 SHA256 7978f3c56a95033bf2bc2cb8d0cb2830c5371aae21e0021503c6dbf2361795d1
 DIST zaptel-1.2.11.tar.gz 1425625 RMD160 6ae43a2f5801dab17216912f976e67371d8e51d2 SHA1 30a2001449ff50b5a47970b76a77500986602211 SHA256 3641c8ef684862b3cc9fd3c3341d25095909a9c2f901d31b7cc9394210cb50e8
@@ -89,6 +90,10 @@ EBUILD zaptel-1.2.11-r1.ebuild 9023 RMD160 a85a0f5225e67234ff5c1bda1c12b63b354e5
 MD5 e902c0a9128595c5a1bf2405fb0c16ae zaptel-1.2.11-r1.ebuild 9023
 RMD160 a85a0f5225e67234ff5c1bda1c12b63b354e5a10 zaptel-1.2.11-r1.ebuild 9023
 SHA256 3c719f62712fe3ed83389c28dc94ab1cbe2ee2022187db225dc3183cd1c4d584 zaptel-1.2.11-r1.ebuild 9023
+EBUILD zaptel-1.2.12-r1.ebuild 8955 RMD160 1cf58c363ed35c346b21e73b0c80418dc0fea59a SHA1 792a35794012ceb2820f8aad706c56cd5c9010b6 SHA256 1acb4108c0b154c4a93546318a1489ddf17e7a6316bbea3f3c00fb5ee8de6e38
+MD5 666ff14f5808d291ea857edcc74179fa zaptel-1.2.12-r1.ebuild 8955
+RMD160 1cf58c363ed35c346b21e73b0c80418dc0fea59a zaptel-1.2.12-r1.ebuild 8955
+SHA256 1acb4108c0b154c4a93546318a1489ddf17e7a6316bbea3f3c00fb5ee8de6e38 zaptel-1.2.12-r1.ebuild 8955
 EBUILD zaptel-1.2.12.ebuild 9018 RMD160 98db97e401944feff969a6bdd884fe21cb53b0c6 SHA1 6b3dfd2e1f5afd9ff539ba6d230b8475cba8a333 SHA256 350fab1289b413a6714a4965a3caefdd1c457f2b362d9f1537729f1a424de0a2
 MD5 49c53ac3b0bf4842511db0ef2becdc88 zaptel-1.2.12.ebuild 9018
 RMD160 98db97e401944feff969a6bdd884fe21cb53b0c6 zaptel-1.2.12.ebuild 9018
@@ -97,10 +102,10 @@ EBUILD zaptel-1.2.9.1-r1.ebuild 8577 RMD160 b487dfe2f52b91b5cd5a75667a2c702bb653
 MD5 3137e2eae66b020b7ac2d239b8d4008b zaptel-1.2.9.1-r1.ebuild 8577
 RMD160 b487dfe2f52b91b5cd5a75667a2c702bb65397c5 zaptel-1.2.9.1-r1.ebuild 8577
 SHA256 36b1e47f352425665c6ed1c77ba9a53374b5bb04e8aaabd8b9483b4c377df8bd zaptel-1.2.9.1-r1.ebuild 8577
-MISC ChangeLog 17519 RMD160 173c1935fce9766e290c29c9a238db297744f4f6 SHA1 6887f7afa4469fe6376c3103206d05c451e5b9de SHA256 e4a9f2ccc861d37417b8dbc0e1b3725e282929c142516291c514a0cff98f781f
-MD5 51c19bf51615180ea54724bde633a1f4 ChangeLog 17519
-RMD160 173c1935fce9766e290c29c9a238db297744f4f6 ChangeLog 17519
-SHA256 e4a9f2ccc861d37417b8dbc0e1b3725e282929c142516291c514a0cff98f781f ChangeLog 17519
+MISC ChangeLog 17674 RMD160 03b666cb5e57992cf234fd424f861b07f2c09787 SHA1 0694464c1d7729ad2fce548f3e3b3dff098342fb SHA256 5d8387270e27c4a17567e3eebe4c8f9ff294b6ea8740dc0f65e04990f6a0ffb1
+MD5 084539c82721ae1dc60153f9e22aa6bf ChangeLog 17674
+RMD160 03b666cb5e57992cf234fd424f861b07f2c09787 ChangeLog 17674
+SHA256 5d8387270e27c4a17567e3eebe4c8f9ff294b6ea8740dc0f65e04990f6a0ffb1 ChangeLog 17674
 MISC metadata.xml 382 RMD160 315172442a4bfaa87b855d4c421b22a2527e97b2 SHA1 7b95f41def10946742929592db1d76b7e3bb0a19 SHA256 f79d5cd273e9ecc2181e60ea226a7cb0128011d877fc7531b2df30bd5fd9ae20
 MD5 f3d5d5b8a638e7a9a83fe0eb0d94282c metadata.xml 382
 RMD160 315172442a4bfaa87b855d4c421b22a2527e97b2 metadata.xml 382
@@ -114,13 +119,16 @@ SHA256 f25c5f1b434635c05e59971a2061b49113e3ad69290169f5fb0d7a5c83364311 files/di
 MD5 3fd6340ada34c7c0f0b1df11e3b80338 files/digest-zaptel-1.2.12 795
 RMD160 5bb91c092f28aab3ca6618b0117d50a6bc045b80 files/digest-zaptel-1.2.12 795
 SHA256 65df7b2070133e6588ce57412a539fc6dbf9e0ad58207ae7f2434c8fc2af46b8 files/digest-zaptel-1.2.12 795
+MD5 50a26754b0e2aaf6c64e65f389164e86 files/digest-zaptel-1.2.12-r1 795
+RMD160 232323602018067046f8699c1d87ffcb3b33af60 files/digest-zaptel-1.2.12-r1 795
+SHA256 54460d35717d16cc7f701365a8e3b927ebb1f5ec41bf1588ab30e87e29e7e6c1 files/digest-zaptel-1.2.12-r1 795
 MD5 4f0bce568656b2bd56047db290089c5e files/digest-zaptel-1.2.9.1-r1 658
 RMD160 fed5eacf2bbc84ace2c5fdd4a4375d04312a761f files/digest-zaptel-1.2.9.1-r1 658
 SHA256 9322dafee7f351be55a54eec5d617e1ee98b3a32aa5cb25546bd9631ac34487f files/digest-zaptel-1.2.9.1-r1 658
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.5 (GNU/Linux)
+Version: GnuPG v1.4.6-ecc01.6 (GNU/Linux)
 
-iD8DBQFFh7KlGDyatLGpTbYRArWQAJ90ulBZU6WpDkq8m3nHlnMmrVNOtQCdEDz4
-81UOd3xQJqK1JUah0SzY8b4=
-=lCS+
+iD8DBQFFrmIiKRy60XGEcJIRAlOKAJ9DaDppmP8deQEF/mP/qw58lxqXOwCfTHTL
+Fatn7qE6Jw3dXN6P5BfQZjY=
+=Tjxr
 -----END PGP SIGNATURE-----
