@@ -1,0 +1,9 @@
+MD5 2f9c26b445dc76e7767fffa5e350d618 bristuff-0.3.0-PRE-1x.tar.gz 279200
+RMD160 bc84aa50370627cfead9e0646cf87c16ddff7b00 bristuff-0.3.0-PRE-1x.tar.gz 279200
+SHA256 13d98160d4a10b46b77c822577e6c64ad7dadbc2df1b4cd0a1007ae3bbbd4aa8 bristuff-0.3.0-PRE-1x.tar.gz 279200
+MD5 541b0a5910843d3c0b6a9de9467b9401 zaphfc_0.3.0-PRE-1o_florz-12.diff.gz 10736
+RMD160 b95d2301402e1108bc480ce0e66e87e3062eccf8 zaphfc_0.3.0-PRE-1o_florz-12.diff.gz 10736
+SHA256 04a8dd22d581b5d28d46a589d695f6eb634bf2bf355347a637fe2d560a63528c zaphfc_0.3.0-PRE-1o_florz-12.diff.gz 10736
+MD5 99b9f86556b903a32607b2751f920513 zaptel-1.2.12.tar.gz 1487021
+RMD160 4cbf2627a8bbbad65ec43578c1c89e79f1682bdb zaptel-1.2.12.tar.gz 1487021
+SHA256 ab1e87645ceaae9269493f4e448596045732389197a9bb8c21bd5be88533e48f zaptel-1.2.12.tar.gz 1487021
