@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/zaptel
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.88 2006/12/19 09:36:30 drizzt Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.89 2007/01/17 17:51:21 gustavoz Exp $
+
+*zaptel-1.2.12-r1 (17 Jan 2007)
+
+  17 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  +zaptel-1.2.12-r1.ebuild:
+  New rev with BRIstuff-0.3.0-PRE-1x
 
 *zaptel-1.2.12 (19 Dec 2006)
 
